--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Dead Title
+author: Ugur0855
+email: ugur_k_oglu@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
 # social links
-twitter_username: your-twitter-handle
-github_username:  your-github-handle
-
+instagram_username: https://www.instagram.com/ugur_k.oglu/
+github_username:  https://github.com/Ugur0855
 show_excerpts: true # set to false to remove excerpts on the homepage
